Opened 13 years ago

Closed 13 years ago

#3261 closed defect (fixed)

some VSSH decoding fail...

Reported by: K.Y.H Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: avi vssh h264 regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://www.sendspace.com/file/m6d66e
http://www.sendspace.com/file/fjfw23

$ ffmpeg -i foreman-cif-best-500.avi test.avi
ffmpeg version 2.1.git Copyright (c) 2000-2013 the FFmpeg developers

built on Dec 31 2013 16:11:44 with gcc 4.8.2 (i686-w64-mingw32 - XvidVideo.RU)

configuration:
libavutil 52. 59.100 / 52. 59.100
libavcodec 55. 47.100 / 55. 47.100
libavformat 55. 22.101 / 55. 22.101
libavdevice 55. 5.102 / 55. 5.102
libavfilter 4. 0.103 / 4. 0.103
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.104 / 0. 17.104

[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 016c6e40] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 016c6e40] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 016c6e40] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 016c6e40] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 016c6e40] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4

Last message repeated 14 times

Input #0, avi, from 'foreman-cif-best-500.avi':

Duration: 00:00:09.97, start: 0.000000, bitrate: 523 kb/s

Stream #0:0: Video: h264 (Main) (VSSH / 0x48535356), yuv420p, 352x288, 30 fp

s, 30 tbr, 30 tbn, 60 tbc
Output #0, avi, to 'test.avi':

Metadata:

ISFT : Lavf55.22.101
Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 352x288, q=2-31, 200

kb/s, 30 tbn, 30 tbc

Stream mapping:

Stream #0:0 -> #0:0 (h264 -> mpeg4)

Press [q] to stop, ? for help
[h264 @ 0323e500] no frame!
[h264 @ 0323f0a0] no frame!
[h264 @ 0323f4a0] no frame!
[h264 @ 0323dd20] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f4a0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f4a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] number of reference frames (0+3) exceeds max (2; probably corr
upt input), discarding one
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
[h264 @ 0323ecc0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f4a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f4a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e8e0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323d940] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 032b7920] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e500] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f4a0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323dd20] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323e100] no frame!
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323f0a0] number of reference frames (0+3) exceeds max (2; probably corr
upt input), discarding one
[h264 @ 016c6e40] missing picture in access unit with size 4
Error while decoding stream #0:0: Invalid data found when processing input
[h264 @ 0323ecc0] no frame!
[h264 @ 016c6e40] missing picture in access unit with size 4
...
...
...

Attachments (1)

foreman-cif-best-500.avi (636.5 KB ) - added by Carl Eugen Hoyos 13 years ago.

Download all attachments as: .zip

Change History (4)

by Carl Eugen Hoyos, 13 years ago

Attachment: foreman-cif-best-500.avi added

comment:1 by Carl Eugen Hoyos, 13 years ago

Keywords: regression added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Looked much. much better until e2983d6e / r25218 (but wasn't perfect).

comment:2 by domingo, 13 years ago

The problem is connected to B-frames wrap around approach.
VSSH format with B-frames is as following:
Meta data contains [startcode][SPS][startcode][PPS]
Frame #0: [startcode][SPS][startcode][PPS][startcode][I-picture]
Frame #1: [startcode][P-picture][startcode][B-picture]
Frame #2: [startcode]
...
Decoder is supposed to output B-frame on step #1 and P-frame on step #2.

comment:3 by Carl Eugen Hoyos, 13 years ago

Keywords: avi added
Resolution: fixed
Status: openclosed

Fixed in 94cf4f8b
The longer sample produces incorrect timestamps and needs -vf fps (or -r):
$ ffmpeg -i vssh-ccir36_d1_2000.avi -qscale 2 -vf fps=30 out.mov

Note: See TracTickets for help on using tickets.